@@ -1,3 +1,5 @@
+- Refactor: Add interface SpaceOccupation
+
 4.0.1-FORK (02-03-2021)
 - Bug fix: Fixed inactive metadataspecs being evaluated during space update
 
